--- a/src/components/CheckoutForm.css
+++ b/src/components/CheckoutForm.css
@@ -3,6 +3,8 @@
     width: 100%;
     max-width: 400px;
     margin: 0 auto;
+    margin-bottom: 3rem;
+    margin-top: 10rem;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -24,13 +26,16 @@
     font-weight: bold;
     margin-bottom: 5px;
   }
+
+  .login-form-button {
+    background-color: #01959d;
+  }
   
   input[type="text"],
   input[type="email"],
   input[type="tel"],
   textarea {
     width: 100%;
-    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
@@ -40,7 +45,6 @@
   button {
     padding: 10px 20px;
     background-color: #007bff;
-    color: #fff;
     border: none;
     border-radius: 5px;
     font-size: 16px;
@@ -48,7 +52,7 @@
   }
   
   button:hover {
-    background-color: #0056b3;
+    background-color: #a7ccf3;
   }
   
   .form-actions {
