--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,4 +1,4 @@
-/* *
+*
 {
     margin: 0;
     padding: 0;
@@ -77,4 +77,4 @@
     background: none;
     background: #fed700;
     cursor: pointer;
-} */
+}
