--- a/src/components/Checkout.css
+++ b/src/components/Checkout.css
@@ -7,3 +7,10 @@
 .table-list th, .table-list td {
     text-align: center !important;
 }
+.modal-delete {
+    display: flex;
+    align-items: center;
+}
+.modal-delete__icon {
+    margin-right: 10px;
+}
