--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,22 +1,21 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
     box-sizing: border-box;
 }
-.contact
-{
+
+.contact {
     padding: 20px 40px;
     width: 100%;
 }
-.contact .container
-{
+
+.contact .container {
     padding: 10px 20px;
     max-width: 100%;
 }
-.contact .container .form
-{
+
+.contact .container .form {
     width: 400px;
     background: #f6f6f6;
     padding: 20px 30px;
@@ -25,30 +24,30 @@
     border-top: 3px solid #fed700;
     border-radius: 5px;
 }
-.contact .container .form h2
-{
+
+.contact .container .form h2 {
     color: #cd1e7c;
     text-transform: uppercase;
     font-size: 18px;
     letter-spacing: 1px;
     font-weight: 600;
 }
-.contact .container .form .box
-{
+
+.contact .container .form .box {
     display: flex;
     margin-top: 20px;
     justify-content: space-between;
 }
-.contact .container .form .box .lable h4
-{
+
+.contact .container .form .box .lable h4 {
     margin-left: 30px;
     color: #232323;
     font-size: 14px;
     font-weight: 600;
     margin-top: 10px;
 }
-.contact .container .form .box .input input
-{
+
+.contact .container .form .box .input input {
     margin-right: 16px;
     border: none;
     outline: none;
@@ -56,8 +55,8 @@
     border-bottom: 2px solid #8a8a8a;
     padding: 10px 20px;
 }
-.contact .container .form .box .input textarea
-{
+
+.contact .container .form .box .input textarea {
     margin-right: 30px;
     border: none;
     outline: none;
@@ -66,8 +65,8 @@
     padding: 10px 20px;
     resize: none;
 }
-.contact .container .form button
-{
+
+.contact .container .form button {
     margin-top: 20px;
     margin-left: 30px;
     padding: 10px 30px;
@@ -77,4 +76,30 @@
     background: none;
     background: #fed700;
     cursor: pointer;
+}
+
+.checkout-container {
+    display: flex;
+}
+
+.checkout-form-contact {
+    height: 450px;
+    width: 400px;
+    margin-top: 100px;
+    margin-bottom: 3rem;
+    margin-right: 100px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f5f5f5;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+}
+
+.google-map {
+    flex: 1;
+    width: 400px;
+    height: 450px;
+    margin-top: 100px;
+    margin-right: 100px;
+    margin-left: 100px;
 }
