--- a/src/components/Checkout.css
+++ b/src/components/Checkout.css
@@ -3,6 +3,8 @@
     font-size: 20px;
     text-align: center;
     font-weight: 600;
+    margin-bottom: 20px;
+
 }
 .table-list th, .table-list td {
     text-align: center !important;
