--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -36,10 +36,6 @@
   margin-top: 100px;
   margin-bottom: 3rem;
   margin-right: 100px;
-  // border: 1px solid #ccc;
-  // border-radius: 10px;
-  // background-color: #f5f5f5;
-  // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 form {
@@ -83,7 +79,7 @@ form {
     margin-left: 10px;
   }
 
-  input[type='submit'] {
+  input[type="submit"] {
     margin-top: 1rem;
     cursor: pointer;
     background: rgb(249, 105, 14);
