--- a/src/components/Cart/index.scss
+++ b/src/components/Cart/index.scss
@@ -40,11 +40,11 @@
   margin-left: 1rem;
   .unit-total-price {
     font-size: 0.75rem;
-    color: #ee4d2d;
+    color: red;
   }
   .num-total-price {
     font-size: 16px;
-    color: #ee4d2d;
+    color: red;
   }
 }
 
