--- a/src/components/Slider/index.scss
+++ b/src/components/Slider/index.scss
@@ -1,85 +1,80 @@
 .home-container {
-    border-radius: 30px;
-    width: 100%;
-    background-color: aquamarine;
-    height: 70vh;
-    overflow: hidden;
-    position: relative;
+  border-radius: 30px;
+  width: 100%;
+  height: 65vh;
+  overflow: hidden;
+  position: relative;
+}
+@media (max-width: 1440px) {
+  .home-container {
+    height: 50vh;
+  }
 }
 .slide {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transition: 1s all cubic-bezier(0.25, 0.1, 0.25, 1);
-    margin-top: 30px;
-}
-
-
-.slide-1 {
-    background-color: blue;
-}
-
-.slide-2 {
-    background-color: brown;
-}
-
-.slide-3 {
-    background-color: coral;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transition: 1s all cubic-bezier(0.25, 0.1, 0.25, 1);
+  margin-top: 30px;
 }
 
 .slider-btn {
-    position: absolute;
-    z-index: 10;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    top: 50%;
-    margin: 0 auto;
+  position: absolute;
+  z-index: 10;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  top: 50%;
+  margin: 0 auto;
 }
 
 .slider-btn button {
-    height: 50px;
-    width: 60px;
-    background-color: #f2f1d3;
-    border: none;
-    border: 0, 5px solid burlywood;
-    border-radius: 50%;
-    color: #234532;
-    font-size: 20px;
-    display: block;
-    
+  height: 50px;
+  width: 50px;
+  background: #f2f1d3;
+  border: 2px solid burlywood;
+  border-radius: 50%;
+  color: #234532;
+  font-size: 24px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: auto;
+  transition: all 0.2s ease-in-out;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
 
 .left-btn {
-    margin-left: 20px;
+  margin-left: 20px;
 }
- .right-btn {
-    margin-right: 20px;
+.right-btn {
+  margin-right: 20px;
 }
 .slider-btn button:hover {
-    background-color: antiquewhite;
-    transform: scale(0.95);
+  background-color: #ffeab6;
+  transform: scale(1.1);
 }
 
 .slider-circle {
-    width: 15px;
-    height: 15px;
-    border: none;
-    border-radius: 50%;
-    background-color: grey;
-    margin: 0 5px;
-    transition: 0.5s all ease-in-out;
+  width: 15px;
+  height: 15px;
+  border: none;
+  border-radius: 50%;
+  background-color: grey;
+  margin: 0 5px;
+  transition: 0.5s all ease-in-out;
 }
 
 .slider-dots {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    bottom: 10px;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 10px;
 }
 
 .active-dot {
-    background-color: white;
+  background-color: white;
 }
