--- a/src/components/imgP/index.scss
+++ b/src/components/imgP/index.scss
@@ -1,6 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway);
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
 .snip1584 {
-  font-family: 'Monospace', sans-serif;
+  font-family: "Monospace", sans-serif;
   position: relative;
   display: inline-block;
   overflow: hidden;
@@ -13,11 +13,11 @@
 }
 
 .slick-slide img {
-    display: revert-layer;
-    object-fit: contain;
-    object-fit: scale-down;
-    height: 100%;
-    object-position: center;
+  display: revert-layer;
+  object-fit: contain;
+  object-fit: scale-down;
+  height: 100%;
+  object-position: center;
 }
 
 .snip1584 * {
@@ -33,7 +33,7 @@
   left: 10px;
   right: 10px;
   top: 100%;
-  content: '';
+  content: "";
   background-color: rgba(51, 51, 51, 0.253);
   -webkit-transition: all 0.25s ease;
   transition: all 0.25s ease;
@@ -114,18 +114,19 @@
   transition-delay: 0.2s;
 }
 
-.slick-prev:before, .slick-next:before {
-    color: black !important;
+.slick-prev:before,
+.slick-next:before {
+  color: black !important;
 }
 
 .slick-pre:before {
-    color: black;
+  color: black;
 }
 
 /* Demo purposes only */
-.news{
-	width: 500px;
-	margin: auto;
-	font-family: 'Raleway';
-	font-size: 24px;
+.news {
+  width: 500px;
+  margin: auto;
+  font-family: "Raleway";
+  font-size: 24px;
 }
